--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="registration.hmtl">SignUp</a></li>
+                <li><a href="registration.html">SignUp</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>  
