--- a/pass_recovery.html
+++ b/pass_recovery.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="index.hmtl">Login</a></li>
+                <li><a href="index.html">Login</a></li>
                 <li><a href="#">About</a></li>
             </ul>
         </nav>  
