--- a/registration.html
+++ b/registration.html
@@ -48,7 +48,7 @@
                     </div>
                     
                     <div class="login-box">
-                        <p>Already Registered? <a href = "index.hmtl">Sign In</a></p>
+                        <p>Already Registered? <a href = "index.html">Sign In</a></p>
                     </div>
                     <div class="trd-login">
                         <p><a href="#">Sign in with Google</a></p>
